--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=kuba
-spring.jpa.hibernate.ddl-auto=validate
+spring.profiles.active=local
+
 spring.flyway.baseline-on-migrate=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
