--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,3 +6,13 @@ spring:
   jpa:
     hibernate:
       ddl-auto: 'validate'
+    properties:
+      hibernate:
+        dialect: 'org.hibernate.dialect.PostgreSQLDialect'
+        jdbc:
+          lob:
+            non_contextual_creation: true
+storage:
+  app:
+    jwtSecret: 'KubaSecretKey'
+    jwtExpirationMs: 86400000
