--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=local
-
+spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
