Add E2E search specification tests.

--- a/src/test/resources/application-testing.yml
+++ b/src/test/resources/application-testing.yml
@@ -12,6 +12,7 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+    database: postgresql
   flyway:
     enabled: false
 storage:
