Add abstraction layer.

--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
                         <source>${project.basedir}/src/main/resources/schema/product.xsd</source>
                         <source>${project.basedir}/src/main/resources/schema/productGroup.xsd</source>
                         <source>${project.basedir}/src/main/resources/schema/pageable.xsd</source>
+                        <source>${project.basedir}/src/main/resources/schema/abstract.xsd</source>
                     </sources>
                 </configuration>
             </plugin>
