Created soap service for products.

--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,14 @@
 
         <!--        Soap-->
         <dependency>
-            <groupId>wsdl4j</groupId>
-            <artifactId>wsdl4j</artifactId>
-            <version>1.6.3</version>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>3.3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-codegen-plugin</artifactId>
+            <version>3.3.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -156,25 +161,29 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.5.0</version>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-codegen-plugin</artifactId>
+                <version>3.3.7</version>
                 <executions>
                     <execution>
-                        <id>xjc</id>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <sourceRoot>${project.build.directory}/generated/cxf</sourceRoot>
+                            <wsdlOptions>
+                                <wsdlOption>
+                                    <wsdl>${project.basedir}/src/main/resources/wsdl/product.wsdl</wsdl>
+                                    <wsdl>${project.basedir}/src/main/resources/wsdl/productGroup.wsdl</wsdl>
+                                    <wsdlLocation>classpath:wsdl/product.wsdl</wsdlLocation>
+                                    <wsdlLocation>classpath:wsdl/productGroup.wsdl</wsdlLocation>
+                                </wsdlOption>
+                            </wsdlOptions>
+                        </configuration>
                         <goals>
-                            <goal>xjc</goal>
+                            <goal>wsdl2java</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <sources>
-                        <source>${project.basedir}/src/main/resources/schema/product.xsd</source>
-                        <source>${project.basedir}/src/main/resources/schema/productGroup.xsd</source>
-                        <source>${project.basedir}/src/main/resources/schema/pageable.xsd</source>
-                        <source>${project.basedir}/src/main/resources/schema/abstract.xsd</source>
-                    </sources>
-                </configuration>
             </plugin>
         </plugins>
     </build>
