Extracted admin credentials to application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=local
 spring.application.name=Storage
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.show-sql=true
+
+feign.client.username=admin
+feign.client.password=adminadmin
