Add LibraryProperties class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.application.name=Storage
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.show-sql=true
 
-feign.client.username=admin
-feign.client.password=adminadmin
+library.username=admin
+library.password=adminadmin
+library.url=http://s0208:8082
