--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 library.username=admin
 library.password=adminadmin
 library.url=http://s0208:8082
+
+export.excel.url=/export/excel
+export.pdf.url=/export/pdf
