Refactored PDF to REST feign client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,17 @@ spring.application.name=Storage
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.show-sql=true
 
+storage.library.books.url=/library/api/books
+storage.library.books.soap.url=/library/api/soap/books
+storage.library.readers.url=/library/api/readers
+storage.library.readers.soap.url=/library/api/soap/readers
+
+
 library.username=admin
 library.password=adminadmin
 library.url=http://s0208:8082
 
 export.excel.url=/export/excel
 export.pdf.url=/export/pdf
+
+storage.front.url=http://localhost:4200
