--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,17 @@
             <version>4.1.2</version>
         </dependency>
 
-
+        <!--        Email-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.2.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
