Made EmailService receive @ModelAttribute -> Message.java. Deleted JavaMailSenderConfig -> added properties instead.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ export.excel.url=/export/excel
 export.pdf.url=/export/pdf
 
 storage.front.url=http://localhost:4200
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ttpraktyki2020storage@gmail.com
+spring.mail.password=storage123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
